# PChat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  appcast.xml.example  config.h.cmake  vcpkg.json
cmake/: BundleDependencies.cmake.in  PChatStaticDeps.cmake
cmake/vcpkg-overlay-ports/cairo/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/glib-networking/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/libgnutls/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/libsoup/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/nettle/: portfile.cmake  vcpkg.json
data/: CMakeLists.txt
data/icons/: CMakeLists.txt
osx/: create-bundle.sh
plugins/audioplayer/: CMakeLists.txt  audioplayer.c  audioplayer.def  audioplayer.h  gui.c  gui.cpp  gui.h
plugins/checksum/: CMakeLists.txt
plugins/fishlim/: CMakeLists.txt
plugins/lua/: CMakeLists.txt
plugins/python/: CMakeLists.txt  _pchat.py  hexchat.py  python.py
plugins/sysinfo/: CMakeLists.txt
plugins/winamp/: CMakeLists.txt
po/: CMakeLists.txt  Makevars  am.po  az.po  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  et.po  fi.po  fr.po  gl.po  hi.po  hu.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  (+5 more)
src/: CMakeLists.txt
src/common/: CMakeLists.txt  cfgfiles.c  chanopt.c  dcc.c  dcc.h  ignore.c  inbound.c  modes.c  network.c  notify.c  outbound.c  outbound.h  pchat.c  pchat.h  pchat_crypto.h  pchat_crypto_openssl.c  pchat_crypto_schannel.c  plugin.c  plugin.h  proto-irc.c  scram.c  scram.h  server.c  servlist.c  servlist.h  ssl.c  ssl.h  ssl_openssl.c  ssl_schannel.c  text.c  tree.c  util.c  util.h
src/common/dbus/: dbus-client.c
src/common/sysinfo/win32/: backend.c
src/fe-gtk3/: CMakeLists.txt  ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview.c  custom-list.c  dccgui.c  editlist.c  fe-gtk.c  fkeys.c  gtkutil.c  ignoregui.c  maingui.c  menu.c  menu.h  notifygui.c  palette.c  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  setup.c  sexy-spell-entry.c  textgui.c  textgui.h  textview-chat.c  textview-chat.h  tray-backend.c  tray-backend.h  tray-linux.c  tray-linux.h  tray-macos.h  tray-macos.m  tray-windows.c  tray-windows.h  update-checker.c  update-checker.h  urlgrab.c  userlistgui.c
src/fe-text/: fe-text.c
src/fe-wx/: BanListDialog.cpp  BanListDialog.h  CMakeLists.txt  ChannelListDialog.cpp  ChannelListDialog.h  CharChartDialog.cpp  CharChartDialog.h  DarkMode.cpp  DarkMode.h  DccDialog.cpp  DccDialog.h  EditListDialog.cpp  EditListDialog.h  FriendsListDialog.cpp  FriendsListDialog.h  IgnoreListDialog.cpp  IgnoreListDialog.h  JoinDialog.cpp  JoinDialog.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  MainWindow.cpp  MainWindow.h  NetworkListDialog.cpp  NetworkListDialog.h  PchatApp.cpp  PchatApp.h  PluginDialog.cpp  PluginDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  RawLogDialog.cpp  RawLogDialog.h  SpellCheck.cpp  SpellCheck.h  TextEventsDialog.cpp  TextEventsDialog.h  UrlGrabberDialog.cpp  UrlGrabberDialog.h  fe-wx.cpp  (+5 more)
